--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -9,7 +9,7 @@ h3,
 h4,
 h5,
 h6 {
-  @apply font-heading transform transition-all duration-150;
+  @apply font-heading transform transition-all duration-150 my-3;
 }
 
 /* heading sizes */
@@ -39,5 +39,5 @@ h6 {
 
 /* other */
 p {
-  @apply prose md:prose-lg lg:prose-xl xl:prose-2xl transform transition-all duration-150;
+  @apply prose md:prose-lg lg:prose-xl xl:prose-2xl transform transition-all duration-150 mt-3;
 }
