chore: making style guide

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-.container {
+@import url('https://fonts.googleapis.com/css2?family=Candal&family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');.container {
     @apply max-w-7xl flex flex-col mx-auto pt-10 px-4 md:px-8 lg:px-10;
 }
 
