--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Candal&family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
 
 .container {
-    @apply max-w-7xl flex flex-col mx-auto pt-10 px-4 md:px-8 lg:px-10;
+  @apply max-w-7xl flex flex-col mx-auto pt-10 px-4 md:px-8 lg:px-10;
 }
 
 button {
@@ -10,4 +10,31 @@ button {
 
 .button-1 {
   @apply border-primary text-primary bg-secondary;
+}
+
+.btn {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0.3em;
+  box-sizing: border-box;
+  background-color: transparent;
+  font-size: 0.9em;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica,
+    Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  padding: 0.75em;
+  display: block;
+  width: 100%;
+  font-weight: 400;
+  line-height: 1.2em;
+  margin: 0;
+  border: 1px solid #41b883;
+  background-color: #41b883;
+  color: #fff;
+  min-width: 0;
+  width: auto;
+  font-weight: 700;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
 }
